--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,16 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+}
+
+.opaque-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .quotes-container {
@@ -25,6 +35,22 @@ body {
 
 .features-container {
 
+}
+
+/* Block Divider */
+
+.block-divider {
+    width: 75px;
+    height: 5px;
+    border: none;
+}
+
+.block-divider--orange {
+    background-color: #f05f40;
+}
+
+.block-divider--short {
+    width: 35px;
 }
 
 /* Jumbotron */
@@ -47,4 +73,26 @@ body {
 .jumbotron .lead {
     margin: 25px 0;
     color: #a7a7a7;
+}
+
+/* Buttons */
+
+.btn--cta {
+    font-weight: bold;
+    border-radius: 23px;
+    width: 160px;
+}
+
+.btn--red {
+    color: white;
+    background-color: #f05f40;
+    border-color: #f05f40;
+}
+
+.btn--red:hover,
+.btn--red:active,
+.btn-red:focus,
+.btn-red:active:focus {
+     background-color: #df4929;
+     border-color: #df4929;
 }
